# task-tracker-mcp

./: .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/: __init__.py  database.py  schema.sql  server.py
