[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "task-tracker-mcp"
version = "1.0.0"
description = "Task Tracker MCP Server - A comprehensive task tracking and management system via Model Context Protocol"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Agent Patterns", email = "dev@agentpatterns.local"}]

dependencies = [
    "mcp>=1.1.2",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
task-tracker-mcp = "task_tracker_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/task_tracker_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
